# render_sandbox

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  check_format.sh  test_app.sh
.github/: copilot-instructions.md
.github/workflows/: accept-image.yml  ci.yml  post-commit-visual-regression.yml  post-commit-visual-regression.yml.backup  visual-diff.yml
diffs/: diff_basic_render_800x600.txt  diff_minimal_400x300.txt  diff_square_512x512.txt
docs/: ADDITIONAL_UPSTREAM_PROMPTS.md  POST_COMMIT_VISUAL_REGRESSION.md  visual-regression-testing.md
scripts/: generate_test_images.py
src/: app_core.rs  engine.rs  gltf_loader.rs  graphics_api.rs  image_capture.rs  lib.rs  main.rs  pipeline.rs  render_graph.rs  renderer.rs  resource_manager.rs  scene.rs
src/render_passes/: forward_pass.rs  mod.rs  placeholder_pass.rs
test_assets/: README.md  triangle.gltf
test_assets/gltf_samples/: README.md
test_assets/gltf_samples/complex/: hierarchical_scene.gltf  multi_cube.gltf
test_assets/gltf_samples/simple/: box.gltf  triangle.gltf
tests/: app_tests.rs  architecture_tests.rs  cli_tests.rs  gltf_integration_tests.rs  gltf_sample_models_tests.rs  gltf_tests.rs  graphics_api_tests.rs  headless_resolution_tests.rs  image_capture_tests.rs  pipeline_tests.rs  render_tests.rs  renderer_tests.rs  test_helpers.rs  visual_regression_tests.rs
