[package]
name = "render_sandbox"
version = "0.1.0"
edition = "2021"

[lib]
name = "render_sandbox"
path = "src/lib.rs"

[[bin]]
name = "render_sandbox"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
winit = "0.29"
wgpu = "22.0"
bytemuck = { version = "1.15", features = ["derive"] }
cgmath = "0.18"
futures = "0.3"
